# nba-streamlit-web-scraper-dashboard

./: .env  pyproject.toml  scraper.py  st_app.py  st_modal.py  supabase_load.py
data/: raw_data.txt  structured_data.json
