[project]
name = "streamlit-web-scraper-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.6",
    "openai>=1.109.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "supabase>=2.20.0",
]
